--- a/base/templates/registration/password_reset_complete.html
+++ b/base/templates/registration/password_reset_complete.html
@@ -3,11 +3,14 @@
 
 {% block content %}
 <div class="col-sm-12">
-<h1>Listo!</h1>
-
-
-<p>Cambiaste exitosamente tu contraseña. Probablemente quieras iniciar sesión ahora.</p>
-
-<p><a href="{{ login_url }}">Iniciar sesión</a></p>
+  <div class="container section">
+    <h1>Listo!</h1>
+  </div>
+  <div class="container section">
+    <p>Cambiaste exitosamente tu contraseña. Probablemente quieras iniciar sesión ahora.</p>
+  </div>
+  <div class="container section">
+    <p><a href="{{ login_url }}">Iniciar sesión</a></p>
+  </div>
 </div>
 {% endblock %}
