--- a/base/templates/registration/password_reset_confirm.html
+++ b/base/templates/registration/password_reset_confirm.html
@@ -3,24 +3,28 @@
 
 {% block content %}
 <div class="col-sm-12">
-<h1>Cambiar la contraseña</h1>
+  <div class="container section">
+    <h1>Cambiar la contraseña</h1>
+  </div>
 
-{% if validlink %}
+  <div class="container section">
+    {% if validlink %}
 
-<p>Por favor ingrese su contraseña dos veces, para que podamos verificar si es correcta</p>
+      <p>Por favor ingrese su contraseña dos veces, para que podamos verificar si es correcta</p>
 
-<form method="post">{% csrf_token %}
-{{ form.new_password1.errors }}
-<p class="aligned wide"><label for="id_new_password1">Contraseña nueva: </label>{{ form.new_password1 }}</p>
-{{ form.new_password2.errors }}
-<p class="aligned wide"><label for="id_new_password2">Confirmar contraseña: </label>{{ form.new_password2 }}</p>
-<p><input type="submit" value="Cambiar la contraseña" /></p>
-</form>
+      <form method="post">{% csrf_token %}
+      {{ form.new_password1.errors }}
+      <p class="aligned wide"><label for="id_new_password1">Contraseña nueva: </label>{{ form.new_password1 }}</p>
+      {{ form.new_password2.errors }}
+      <p class="aligned wide"><label for="id_new_password2">Confirmar contraseña: </label>{{ form.new_password2 }}</p>
+      <p><input type="submit" value="Cambiar la contraseña" /></p>
+      </form>
 
-{% else %}
+    {% else %}
 
-<p>El link para cambiar la contraseña no es válido, posiblemente porque ya fue usado. Solicite una nueva contraseña para cambiarla nuevamente.</p>
+      <p>El link para cambiar la contraseña no es válido, posiblemente porque ya fue usado. Solicite una nueva contraseña para cambiarla nuevamente.</p>
 
-{% endif %}
+    {% endif %}
+  </div>
 </div>
 {% endblock %}
