--- a/base/templates/registration/password_reset_form.html
+++ b/base/templates/registration/password_reset_form.html
@@ -3,12 +3,17 @@
 
 {% block content %}
 <div class="col-sm-12">
-<h1> Solicitar una nueva contraseña </h1>
-<p>Te olvidaste la contraseña? Escribí tu email abajo y te vamos a enviar instrucciones para cambiarla.</p>
+  <div class="container section">
+    <h1> Solicitar una nueva contraseña </h1>
+  </div>
 
-<form method="post">{% csrf_token %}
-{{ form.email.errors }}
-<p><label for="id_email"> Email:</label> {{ form.email }} <input type="submit" value="Cambiar mi contraseña" /></p>
-</form>
+  <div class="container section">
+    <p>Te olvidaste la contraseña? Escribí tu email abajo y te vamos a enviar instrucciones para cambiarla.</p>
+
+    <form method="post">{% csrf_token %}
+    {{ form.email.errors }}
+    <p><label for="id_email"> Email:</label> {{ form.email }} <input type="submit" value="Cambiar mi contraseña" /></p>
+    </form>
+  </div>
 </div>
 {% endblock %}
