--- a/base/templates/registration/registration_complete.html
+++ b/base/templates/registration/registration_complete.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 <div class="col-sm-12">
-<h1> Felicitaciones! Ya estás registrado en Loi Procesos! </h1>
-<h2> Revisá tu correo para activar tu cuenta ;)  </h2>
+  <div class="container section">
+    <h1> Felicitaciones! Ya estás registrado en Loi Procesos! </h1>
+    <h2> Revisá tu correo para activar tu cuenta ;)  </h2>
+  </div>
 </div>
 {% endblock %}
