--- a/base/templates/registration/activate.html
+++ b/base/templates/registration/activate.html
@@ -2,8 +2,10 @@
 
 {% block content %}
 <div class="col-sm-12">
-  <h2> Falló la activación de tu cuenta </h2>
+  <div class="container">
+    <h2> Falló la activación de tu cuenta </h2>
 
-  <h2> Clave de activación no válida: {{ activation_key }}  </h2>
+    <h2> Clave de activación no válida: {{ activation_key }}  </h2>
+  </div>
 </div>
 {% endblock %}
