--- a/base/templates/registration/activation_complete.html
+++ b/base/templates/registration/activation_complete.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 <div class="col-sm-12">
-  <h1> Felicitacines! Tu cuenta ya está activada! </h1>
+  <div class="container">
+    <h1> Felicitacines! Tu cuenta ya está activada! </h1>
+  </div>
 </div>
 {% endblock %}
