--- a/base/templates/registration/logout.html
+++ b/base/templates/registration/logout.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 <div class="col-sm-12">
-  <h1> Cerraste sesión correctamnte. </h1>
+  <div class="container section">
+    <h1> Cerraste sesión correctamnte. </h1>
+  </div>
 </div>
 {% endblock %}
