--- a/teoria/templates/teoria/ver_unidad.html
+++ b/teoria/templates/teoria/ver_unidad.html
@@ -3,137 +3,155 @@
 
 {% block content %}
   <div class="col-sm-12">
-    <div class="row">
-      <div class="col-sm-8">
-        <h1>{{ unidad }}</h1>
+    <div class="container section">
+      <div class="row">
+        <div class="col-sm-8">
+          <h1>{{ unidad }}</h1>
+        </div>
       </div>
     </div>
-    {% if texts %}
-      {% for text in texts %}
-        {{text | safe}}
-      {% endfor %}
-    {% endif %}
-    <div class="row">
-      <a class="btn-soft inline-title" href="{% url 'add_recurso' 'm' %}">
-        {% if staff %}
-          Agregar
-        {% else %}
-          Sugerir
-        {% endif %}
-      </a>
-      <div class="inline-title">
-        <h3>Material de estudio:</h3>
-        {% if material %}
-          <ol class="list-group">
-            {% for mat, votos, votado in material %}
-              <li class="big list-group-item">
-                <span class="badge">Votos: {{ votos }}</span>
-                {% if user.is_authenticated %}
-                  <span class="badge votaste">
-                    {% if votado %}
-                      {% if votado.voto > 0 %}
-                        Votaste <span class="glyphicon glyphicon-ok positivo" ></span>
+
+    <div class="container section">
+      <div class="row">
+        <div class="col-sm-12">
+          {% if texts %}
+            {% for text in texts %}
+              {{text | safe}}
+            {% endfor %}
+          {% endif %}
+        </div>
+      </div>
+    </div>
+
+    <div class="container section">
+      <div class="row">
+        <a class="btn-soft inline-title" href="{% url 'add_recurso' 'm' %}">
+          {% if staff %}
+            Agregar
+          {% else %}
+            Sugerir
+          {% endif %}
+        </a>
+        <div class="inline-title">
+          <h3>Material de estudio:</h3>
+          {% if material %}
+            <ol class="list-group">
+              {% for mat, votos, votado in material %}
+                <li class="big list-group-item">
+                  <span class="badge">Votos: {{ votos }}</span>
+                  {% if user.is_authenticated %}
+                    <span class="badge votaste">
+                      {% if votado %}
+                        {% if votado.voto > 0 %}
+                          Votaste <span class="glyphicon glyphicon-ok positivo" ></span>
+                        {% else %}
+                          Votaste <span class="glyphicon glyphicon-remove negativo" ></span>
+                        {% endif %}
                       {% else %}
-                        Votaste <span class="glyphicon glyphicon-remove negativo" ></span>
+                        Votá:
+                        <a href=" {% url 'voto_recurso' '+' 'm' mat.id %}">
+                          <span class="glyphicon glyphicon-ok positivo" ></span>
+                        </a>
+                        <a href=" {% url 'voto_recurso' '-' 'm' mat.id %}">
+                          <span class="glyphicon glyphicon-remove negativo" ></span>
+                        </a>
                       {% endif %}
-                    {% else %}
-                      Votá:
-                      <a href=" {% url 'voto_recurso' '+' 'm' mat.id %}">
-                        <span class="glyphicon glyphicon-ok positivo" ></span>
-                      </a>
-                      <a href=" {% url 'voto_recurso' '-' 'm' mat.id %}">
-                        <span class="glyphicon glyphicon-remove negativo" ></span>
-                      </a>
-                    {% endif %}
-                  </span>
-                {% endif %}
-                <p class="in-line-p">
-                  {% if staff %}
-                    <a href="{% url 'del_recurso' 'm' mat.id %}" class="in-line-p"><span class="in-line-p">[quitar] </span></a>
+                    </span>
                   {% endif %}
-                  <a href="{{ mat.link }}" target="_blank" class="dark-link in-line-p"> {{ mat.nombre }} </a>
-                  <span class="in-line-p">Sugerido por: {{ mat.autor }}</span>
-                </p>
-              </li>
-            {% endfor %}
-          </ol>
-        {% else %}
-          <p>Todavía no hay mateial de estudio cargdo para esta unidad</p>
-        {% endif %}
+                  <p class="in-line-p">
+                    {% if staff %}
+                      <a href="{% url 'del_recurso' 'm' mat.id %}" class="in-line-p"><span class="in-line-p">[quitar] </span></a>
+                    {% endif %}
+                    <a href="{{ mat.link }}" target="_blank" class="dark-link in-line-p"> {{ mat.nombre }} </a>
+                    <span class="in-line-p">Sugerido por: {{ mat.autor }}</span>
+                  </p>
+                </li>
+              {% endfor %}
+            </ol>
+          {% else %}
+            <p>Todavía no hay mateial de estudio cargdo para esta unidad</p>
+          {% endif %}
+        </div>
       </div>
     </div>
-    <div class="row">
-      <a class="btn-soft inline-title" href="{% url 'add_recurso' 'p' %}">
-        {% if staff %}
-          Agregar
-        {% else %}
-          Sugerir
-        {% endif %}
-      </a>
-      <div class="inline-title">
-        <h3>Preguntas para facilitar la comprensión de la unidad:</h3>
-        {% if preguntas %}
-          <ol>
-            {% for preg in preguntas %}
-              <li>
-                <p class="in-line-p">
-                  {% if staff %}
-                    <a href="{% url 'del_recurso' 'p' preg.id %}"><span> [quitar] </span></a>
-                  {% endif %}
-                  <p class="in-line-p"> {{ preg.pregunta }}</p>
-                  <span class="in-line-p"> Sugerido por: {{ preg.autor }}</span>
-                </p>
-              </li>
-            {% endfor %}
-          </ol>
-        {% else %}
-          <p>Todavía no hay preguntas cargadas para esta unidad</p>
-        {% endif %}
+
+    <div class="container section">
+      <div class="row">
+        <a class="btn-soft inline-title" href="{% url 'add_recurso' 'p' %}">
+          {% if staff %}
+            Agregar
+          {% else %}
+            Sugerir
+          {% endif %}
+        </a>
+        <div class="inline-title">
+          <h3>Preguntas para facilitar la comprensión de la unidad:</h3>
+          {% if preguntas %}
+            <ol>
+              {% for preg in preguntas %}
+                <li>
+                  <p class="in-line-p">
+                    {% if staff %}
+                      <a href="{% url 'del_recurso' 'p' preg.id %}"><span> [quitar] </span></a>
+                    {% endif %}
+                    <p class="in-line-p"> {{ preg.pregunta }}</p>
+                    <span class="in-line-p"> Sugerido por: {{ preg.autor }}</span>
+                  </p>
+                </li>
+              {% endfor %}
+            </ol>
+          {% else %}
+            <p>Todavía no hay preguntas cargadas para esta unidad</p>
+          {% endif %}
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-sm-12">
-    <div class="row">
-      <h2> Otros recursos sugeridos: </h2>
-      <div class="col-sm-6">
-        <h3>Material</h3>
-        {% if material_extra %}
-          <ol>
-          {% for mat in material_extra %}
-              <li>
-                <p>
-                  {% if request.user.is_staff %}
-                    <a href="{% url 'admin:teoria_material_change' mat.pk %}" target="_blank">[x]</a>
-                  {% endif %}
-                  <a href="{{ mat.link }}" target="_blank" class="dark-link"> {{ mat.nombre }} </a>
-                  <span>Sugerido por: {{ mat.autor }}</span>
-                </p>
-              </li>
-          {% endfor %}
-          </ol>
-        {% else %}
-          <p>Toavía no hay preguntas sugeridas para esta unidad</p>
-        {% endif %}
-      </div>
-      <div class="col-sm-6">
-        <h3>Preguntas</h3>
-        {% if preguntas_extra %}
-          <ol>
-          {% for preg in preguntas_extra %}
-          <li>
-            <p>
-              {% if request.user.is_staff %}
-                <a class="in-line-preg" href="{% url 'admin:teoria_pregunta_change' preg.pk %}" target="_blank">[x]</a>
-              {% endif %}
-              {{ preg.pregunta }}
-              <span class="in-line-preg">Sugerido por: {{ preg.autor }}</span>
-            </p>
-          </li>
-          {% endfor %}
-          </ol>
-        {% else %}
-          <p>Toavía no hay preguntas sugeridas para esta unidad</p>
-        {% endif %}
+
+  <div class="container section">
+    <div class="col-sm-12">
+      <div class="row">
+        <h2> Otros recursos sugeridos: </h2>
+        <div class="col-sm-6">
+          <h3>Material</h3>
+          {% if material_extra %}
+            <ol>
+            {% for mat in material_extra %}
+                <li>
+                  <p>
+                    {% if request.user.is_staff %}
+                      <a href="{% url 'admin:teoria_material_change' mat.pk %}" target="_blank">[x]</a>
+                    {% endif %}
+                    <a href="{{ mat.link }}" target="_blank" class="dark-link"> {{ mat.nombre }} </a>
+                    <span>Sugerido por: {{ mat.autor }}</span>
+                  </p>
+                </li>
+            {% endfor %}
+            </ol>
+          {% else %}
+            <p>Toavía no hay preguntas sugeridas para esta unidad</p>
+          {% endif %}
+        </div>
+        <div class="col-sm-6">
+          <h3>Preguntas</h3>
+          {% if preguntas_extra %}
+            <ol>
+            {% for preg in preguntas_extra %}
+            <li>
+              <p>
+                {% if request.user.is_staff %}
+                  <a class="in-line-preg" href="{% url 'admin:teoria_pregunta_change' preg.pk %}" target="_blank">[x]</a>
+                {% endif %}
+                {{ preg.pregunta }}
+                <span class="in-line-preg">Sugerido por: {{ preg.autor }}</span>
+              </p>
+            </li>
+            {% endfor %}
+            </ol>
+          {% else %}
+            <p>Toavía no hay preguntas sugeridas para esta unidad</p>
+          {% endif %}
+        </div>
       </div>
     </div>
   </div>
