--- a/grupos/templates/grupos/ver_grupo.html
+++ b/grupos/templates/grupos/ver_grupo.html
@@ -60,28 +60,107 @@
         {% endif %}
       </div>
     </div>
-    <!-- GRAFICOS -->
+  </div>
+    <!-- EXPOSICIONES -->
     <div class="container section">
       <div class="row">
-        {% if tiempos_chart %}
-         {{tiempos_chart.0 | safe}}
-         {{tiempos_chart.1 | safe}}
-        {% endif %}
+        <div class="col-sm-12">
+          <h2>Nuestras exposiciones: </h2>
+        </div>
+      </div>
+        <div class="row">
+          <div class="col-sm-8 col-sx-12">
+            {% if exposiciones %}
+              <ol class="list-group">
+              {%  for expo in exposiciones %}
+                <li class="list-group-item">
+                  <a href="{% url 'ver_exposicion' expo.pk %}">
+                    <p>{{ expo }}</p>
+                  </a>
+                </li>
+              {% endfor %}
+              </ol>
+            {% else %}
+              <p>Todavía no tenemos exposiciones cargadas</p>
+            {% endif %}
+        </div>
+      <!-- GRAFICO -->
+        <div class="col-sm-4 col-sx-12">
+          {% if tiempos_chart %}
+           {{tiempos_chart.0 | safe}}
+           {{tiempos_chart.1 | safe}}
+          {% endif %}
+        </div>
       </div>
     </div>
+
+
+    <!-- PREGUNTAS -->
+    <div class="container section">
+      <div class="row">
+        <div class="col-sm-12">
+          <h2> Las preguntas que más nos ayudaron: </h2>
+          {% if preg_votadas %}
+            <ol class="list-group">
+              {% for pregunta, exposicion, grupo in preg_votadas %}
+                <li class="list-group-item">
+                  {% if pertenece %}
+                    <span class="badge votaste">
+                      <a href="{% url 'votar_preg' pregunta.pk '-' %}">Sacar de las mejores</a>
+                    </span>
+                  {% endif %}
+                  <p>
+                    {{ pregunta }}
+                    <span>
+                      {{exposicion.clase}} - TP{{exposicion.tp.numero}} - preguntó {{grupo}}
+                    </span>
+                  </p>
+                </li>
+              {% endfor %}
+            </ol>
+          {% else %}
+            <p> Todavía no seleccionamos las preguntas que más nos ayudaron </p>
+          {% endif %}
+
+          <h2> Todas las preguntas que nos hicieron: </h2>
+          {% if preg_no_votadas %}
+            <ol class="list-group">
+              {% for pregunta, exposicion, grupo in preg_no_votadas %}
+                <li class="list-group-item">
+                  {% if pertenece %}
+                    <span class="badge votaste">
+                      <a href="{% url 'votar_preg' pregunta.pk '+' %}">Muy buena!</a>
+                    </span>
+                  {% endif %}
+
+                  <p>
+                    {{ pregunta }}
+                    <span>
+                      {{exposicion.clase}} - TP{{exposicion.tp.numero}} - preguntó {{grupo}}
+                    </span>
+                  </p>
+                </li>
+              {% endfor %}
+            </ol>
+          {% else %}
+            <p>Todavía hay preguntas cargadas </p>
+          {% endif %}
+
 
     <!-- TRABAJOS EN CURSO -->
     <div class="container section">
       <div class="row">
-        {% if user.is_authenticated %}
-          {% if grupo.id_carpeta_drive %}
-          <h2> Trabajos prácticos en curso: </h2>
-          <iframe src="https://drive.google.com/embeddedfolderview?id={{ grupo.id_carpeta_drive }}"
-                  style="width:100%; height:600px; border:0;"></iframe>
+        <div class="col-sm-12">
+          {% if user.is_authenticated %}
+            {% if grupo.id_carpeta_drive %}
+            <h2> Trabajos prácticos en curso: </h2>
+            <iframe src="https://drive.google.com/embeddedfolderview?id={{ grupo.id_carpeta_drive }}"
+                    style="width:100%; height:600px; border:0;"></iframe>
+            {% endif %}
+          {% else %}
+            <p> Para ver los trabajos prácticos de este grupo tenés que estar logueado</p>
           {% endif %}
-        {% else %}
-          <p> Para ver los trabajos prácticos de este grupo tenés que estar logueado</p>
-        {% endif %}
+        </div>
       </div>
     </div>
   </div>
