--- a/clases/templates/clases/ver_exposicion.html
+++ b/clases/templates/clases/ver_exposicion.html
@@ -9,6 +9,17 @@
   </div>
   <!--/title-->
 
+  <!--descripcion-->
+  <div class="container section">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6">
+        {% if exposicion.description %}
+          {{ exposicion.description | safe }}
+        {% endif %} 
+      </div>
+    </div>
+  </div>
+  <!--/descripcion-->
 
   <!--buttons-->
   <div class="container section">
@@ -27,13 +38,15 @@
           </div>
         </a>
       </div>
-      <div class="col-xs-12 col-sm-6">
+      {% if not exposicion.virtual %}
+        <div class="col-xs-12 col-sm-6">
         <a href="{% url 'ver_clase' exposicion.clase.id %}">
-          <div class="relleno">
+            <div class="relleno">
             Exposiciones del {{exposicion.clase}}
-          </div>
+            </div>
         </a>
-      </div>
+        </div>
+      {% endif %}
       <div class="col-xs-12 col-sm-6">
         <a href="{% url 'preguntas'%}">
           <div class="relleno">
@@ -45,6 +58,19 @@
   </div>
   <!--/buttons-->
 
+  <!--video-->
+  {% if exposicion.virtual %}
+    <div class="container section">
+      <div class="row center-content">
+        <div class="col-sm-12">
+          <iframe  width="420" height="315"
+           src="https://www.youtube.com/embed/{{video_id}}">
+          </iframe> 
+          <p> Exposición subida el {{exposicion.start_expo}}</p>
+        </div>
+      </div>
+    </div>
+  {% else %}
   <!--tiempos-->
   <div class="container section">
     <div class="panel panel-primary">
@@ -78,6 +104,7 @@
       </div>
     </div>
   </div>
+  {% endif %}
   <!--/tiempos-->
 
   <!--gráficos-->
