added custom url to ask to an specific exposition

--- a/clases/templates/clases/ver_exposicion.html
+++ b/clases/templates/clases/ver_exposicion.html
@@ -48,7 +48,7 @@
         </div>
       {% endif %}
       <div class="col-xs-12 col-sm-6">
-        <a href="{% url 'preguntas'%}">
+        <a href="{% url 'preguntas' exposicion.id %}">
           <div class="relleno">
             Cargar preguntas
           </div>
