--- a/grupos/templates/grupos/dashboard.html
+++ b/grupos/templates/grupos/dashboard.html
@@ -5,6 +5,7 @@
 <div class="col-sm-12">
   <div class="container section">
     {% if perms.clases %}
+    <h1>Overview de todos los grupos</h1>
     <div class="table-responsive">
       <table class="table table-striped">
         <tr>
