--- a/grupos/templates/grupos/dashboard.html
+++ b/grupos/templates/grupos/dashboard.html
@@ -22,6 +22,27 @@
         {% endfor %}
       </table>
     </div>
+    <h1>Control de Teoría</h1>
+
+    {% for u, unidades in tabla_unidades %}
+    <h3>{{u}}</h3>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <tr>
+          {% for h in unidades_headheads %}
+            <th>{{h}}</th>
+          {% endfor %}
+        </tr>
+        {% for row in unidades %}
+        <tr>
+          {% for cell in row %}
+            <td>{{ cell }}</td>
+          {% endfor %}
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
+    {% endfor %}
     {% else %}
     <h4>No tenés autorización para ver esta página</h4>
     {% endif %}
