fixed heads to teoria table in dashboard

--- a/grupos/templates/grupos/dashboard.html
+++ b/grupos/templates/grupos/dashboard.html
@@ -29,7 +29,7 @@
     <div class="table-responsive">
       <table class="table table-striped">
         <tr>
-          {% for h in unidades_headheads %}
+          {% for h in unidades_head %}
             <th>{{h}}</th>
           {% endfor %}
         </tr>
