--- a/grupos/templates/grupos/grupos_home.html
+++ b/grupos/templates/grupos/grupos_home.html
@@ -13,6 +13,15 @@
       {% endfor %}
     </div>
   </div>
+    {% if user.is_authenticated %}
+    <div class="container section">
+      <a href="{% url 'dashboard' %}" class="big">
+        <div class="row relleno tercio">
+         Tablero de Control
+        </div>
+      </a>
+    </div>
+    {% endif %}
 
   <div class="container section">
     <h1>Ver grupos y trabajos prácticos de años anteriores: </h1>
