--- a/grupos/templates/grupos/dashboard_grupo.html
+++ b/grupos/templates/grupos/dashboard_grupo.html
@@ -17,7 +17,11 @@
           {% endfor %}
         </tr>
         {% for row in tabla_expo %}
-        <tr>
+        {% if row.1 > 0 and row.2 == 0 %}
+          <tr class="danger">
+        {% else %}
+          <tr>
+        {% endif %}
           {% for cell in row %}
             {% if forloop.first %}
               <td>
@@ -45,7 +49,13 @@
           {% endfor %}
         </tr>
         {% for row in tabla_otras_expo %}
-        <tr>
+        {% if row.1 == 0 %}
+          <tr class="danger">
+        {% elif row.2 > 0 %}
+          <tr class="success">
+        {% else %}
+          <tr>
+        {% endif %}
           {% for cell in row %}
             {% if forloop.first %}
               <td>
