--- a/grupos/templates/grupos/ver_autoevaluacion.html
+++ b/grupos/templates/grupos/ver_autoevaluacion.html
@@ -6,39 +6,45 @@
     <h1>{{ autoevaluacion }}</h1>
   </div>
 
-  {% for grupo, evaluacion in evaluaciones %}
+  {% if perms.grupos %}
+    {% for grupo, evaluacion in evaluaciones %}
+      <div class="container section">
+        <h3>{{grupo}}</h3>
+        {% if evaluacion %}
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <tr>
+                {% for h in tabla_heads %}
+                  <th>{{h}}</th>
+                {% endfor %}
+              </tr>
+              {% for row in evaluacion %}
+              <tr>
+                {% for cell in row %}
+                  {% if forloop.first %}
+                    <td>
+                      <a href="{% url 'ver_grupo' cell.id %}">
+                        {{ cell }}
+                      </a>
+                    </td>
+                  {% else %}
+                    <td>{{ cell }}</td>
+                  {% endif %}
+                {% endfor %}
+              </tr>
+              {% endfor %}
+            </table>
+          </div>
+        {% else %}
+          <p> Este grupo todavía no completó la evaluación </p>
+        {% endif %}
+      </div>
+    {% endfor %}
+  {% else %}
     <div class="container section">
-      <h3>{{grupo}}</h3>
-      {% if evaluacion %}
-        <div class="table-responsive">
-          <table class="table table-striped">
-            <tr>
-              {% for h in tabla_heads %}
-                <th>{{h}}</th>
-              {% endfor %}
-            </tr>
-            {% for row in evaluacion %}
-            <tr>
-              {% for cell in row %}
-                {% if forloop.first %}
-                  <td>
-                    <a href="{% url 'ver_grupo' cell.id %}">
-                      {{ cell }}
-                    </a>
-                  </td>
-                {% else %}
-                  <td>{{ cell }}</td>
-                {% endif %}
-              {% endfor %}
-            </tr>
-            {% endfor %}
-          </table>
-        </div>
-      {% else %}
-        <p> Este grupo todavía no completó la evaluación </p>
-      {% endif %}
+      <p> No tenes autorizacion para ver esta página </p>
     </div>
-  {% endfor %}
+  {% endif %}
 </div>
 {% endblock %}
 
