fixed autoevaluacion group bug and addeed user field

--- a/grupos/templates/grupos/autoevaluacion.html
+++ b/grupos/templates/grupos/autoevaluacion.html
@@ -32,6 +32,7 @@
     {% if ultima_evaluacion_table %}
       <div class="container section">
         <h1>Última evaluación enviada por tu grupo: </h1>
+        <p>{{ultima_evaluacion_table.0.1.evaluador}}</p>
         <div class="table-responsive">
           <table class="table table-striped">
             <tr>
