added custom js block in base

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -110,6 +110,10 @@
       </div>
     </div>
 
+   <!-- Added custom js -->
+    {% block extra_js %}
+    {% endblock %}
+
    {% if not debug %}
    <!-- Google Analytics -->
     <script>
