--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -7,31 +7,11 @@
       <h1 class="home">¡Bienvenido a la cátedra Procesos Industriales!</h1>
     </div>
 
-    <!-- INTRO PRUEBA -->
+    <!-- CAROUSEL -->
     <div class="container section">
       <div class="row row-caousel">
         <div id="carousel-loi" class="carousel slide" data-ride="carousel">
 
-          <!-- Buttons -->
-          <div class="buttons-carousel">
-            <div class="row">
-              <div class="col-xs-6">
-                <a href="#teoria" class="big">
-                  <div class="row relleno home-img-btn">
-                    <p class="home-btn-text">Teoría</p>
-                  </div>
-                </a>
-              </div>
-              <div class="col-xs-6">
-                <a href="#practica" class="big">
-                  <div class="row relleno home-img-btn">
-                    <p class="home-btn-text">Práctica</p>
-                  </div>
-                </a>
-              </div>
-
-            </div>
-          </div>
           <!-- Indicators -->
           <ol class="carousel-indicators">
             <li data-target="#carousel-loi" data-slide-to="0" class="active"></li>
@@ -46,136 +26,58 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
             <div class="item active">
-              <img src="/static/img/home_blur1.jpg" alt="...">
+              <img src="/static/img/home/home1.jpg" alt="...">
             </div>
             <div class="item">
-              <img src="/static/img/home_blur2.jpg" alt="...">
+              <img src="/static/img/home/home2.jpg" alt="...">
             </div>
             <div class="item">
-              <img src="/static/img/home_blur3.jpg" alt="...">
+              <img src="/static/img/home/home3.jpg" alt="...">
             </div>
             <div class="item">
-              <img src="/static/img/home_blur4.jpg" alt="...">
+              <img src="/static/img/home/home4.jpg" alt="...">
             </div>
             <div class="item">
-              <img src="/static/img/home_blur5.jpg" alt="...">
+              <img src="/static/img/home/home5.jpg" alt="...">
             </div>
             <div class="item">
-              <img src="/static/img/home_blur6.jpg" alt="...">
+              <img src="/static/img/home/home6.jpg" alt="...">
             </div>
             <div class="item">
-              <img src="/static/img/home_blur7.jpg" alt="...">
+              <img src="/static/img/home/home7.jpg" alt="...">
             </div>
           </div>
           <!-- /Wrapper for slides -->
 
+          <!-- Controls next and prev-->
+          <a class="left carousel-control" href="#carousel-loi" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-loi" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+          <!-- /Controls next and prev-->
 
         </div>
       </div>
     </div>
     <!-- /carousel -->
-
-    <!-- TEORÍA -->
     <div class="container section">
-      <div class="home-subtitle" id="teoria">
-        <h2 class="home"><a href="{% url 'teoria_home'%}"> Teoría de Procesos Industriales: </a></h2>
-      </div>
-      <p class="home">¡Aprendé mirando!</p>
-      <p class="home">¿Querés conocer más sobre algún proceso en particular? Mirá los videos y el material que seleccionamos.</p>
-      <p class="home">¿Conocés nuevos materiales o proyectos que nos puedan servir para aprender mejor? ¡Animate a sugerirlo en nuestras unidades!</p>
-      {% for u in unidades %}
-        <div class="list-group">
-          <a type="button" class="list-group-item" href="{% url 'ver_unidad' u.id %}"> {{ u }}</a>
-        </div>
-      {% endfor %}
-    </div>
-    <div class="container section">
-      <a href="{% url 'teoria_home' %}" class="big">
-        <div class="row relleno tercio">
-          Ver todas las unidades
-        </div>
-      </a>
-    </div>
-
-    <!-- PRACTICA DE PROCESOS -->
-    <div class="container section">
-      <div class="home-subtitle" id="practica">
-        <h2 class="home">Práctica de Procesos Industriales</h2>
-      </div>
-      <p class="home"> La práctica de procesos industriales tiene como objetivo formar profesionales con conocimientos de las problemáticas reales de las empresas de la región. </p>
-      <p class="home"> ¿Te animás a conocer todo lo que se puede lograr en un cuatrimestre? ¡Mirá los trabajos finales de los años anteriores y conocé los grupos de trabajo de este año!</p>
       <div class="row">
-        <div class="col-sm-6">
-          <a href="{% url 'grupos_home' %}">
-            <div class="row relleno">
-              Ver grupos y TP finales
-            </div>
-          </a>
-        </div>
-        <div class="col-sm-6">
-          <a href="{% url 'trabajos_practicos' %}">
-            <div class="row relleno">
-              Ver guía de trabajos prácticos
-            </div>
-          </a>
+        <div class="col-xs-12 col-sm-6">
+          <h3 class="home">Objetivo de la carrera:</h3>       
+          Formar profesionales capaces de Organizar, Dirigir, Gestionar y Tomar decisiones en organizaciones empresarias.
+        </div>   
+        <div class="col-xs-12 col-sm-6">
+          <h3 class="home">Objetivo de la Materia:</h3>     
+          <ul>
+            <li>Capacitar a los alumnos en el uso de una metodología de trabajo y pensamiento tendientes a desarrollar una visión global de las organizaciones, que les permita entender, operar, gestionar y/o tomar decisiones en empresas industriales, principalmente de la región.</li>
+            <li> Fomentar el desarrollo de trabajos grupales, la investigación independiente, la autoevaluación de los trabajos y la presentación pública de los mismos.</li>
+          </ul>
         </div>
       </div>
     </div>
-
-    <!-- ÚLTIMA CLASE -->
-    <div class="container section">
-      <h3 class="home"><a href="{% url 'ver_clase' clase.id %}"> Última clase: {{ clase }}</a></h3>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="center-content">
-            {% if tiempos %}
-              {{ tiempos.0 | safe }}
-              {{ tiempos.1 | safe }}
-            {% endif %}
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="center-content">
-            {% if preguntas %}
-              {{ preguntas.0 | safe }}
-              {{ preguntas.1 | safe }}
-            {% endif %}
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- CLASE ANTERIOR -->
-    <div class="container section">
-      <h3 class="home"><a href="{% url 'ver_clase' clase_ant.id %}"> Clase anterior: {{ clase_ant }}</a></h3>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="center-content">
-            {% if tiempos_ant %}
-              {{ tiempos_ant.0 | safe }}
-              {{ tiempos_ant.1 | safe }}
-            {% endif %}
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="center-content">
-            {% if preguntas_ant %}
-              {{ preguntas_ant.0 | safe }}
-              {{ preguntas_ant.1 | safe }}
-            {% endif %}
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- TODAS LAS CLASES -->
-    <div class="container section">
-      <a href="{% url 'clases_home' %}" class="big">
-        <div class="row relleno tercio">
-          Ver todas las clases
-        </div>
-      </a>
-    </div>
-
-
-  </div>
+        
 {% endblock %}
